--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,7 @@
 The work is based on the course project I completed in MECH 530 Mechanics of Composite Materials in Fall 2019.</p>
 <p>2. The ADI heat calculator solves the 2D diffusion of Heat equation over a squared plate with Dirichlet Boundary Conditions using the Alternating-Direction Implicit (ADI) Scheme.</p>
 <br>
+<p>Thanks my pal Nic Paun for helping me deploying this app to google cloud run.</p>
 <p>You can access my resume <a href="https://github.com/jasonzhou1997/resume/blob/main/Zhou_Xinchen%20Resume.pdf">here.</a></p>
     <image src="{{ url_for('static', filename='images/composite_lam.png')}}"ALIGN=”left”/>
                   <image src="{{ url_for('static', filename='images/ADI_demo.png')}} "width = "800" height = "500"/>
