Changed locations of buttons for base file

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">CompLamMatCal</a>
+    <a class="navbar-brand" href="#">Personal Site</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,7 +12,7 @@
       <ul class="navbar-nav">
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Composite Mat Calculator</a>
+          <a class="nav-link active" aria-current="page" href="/">Homepage</a>
         </li>
 
         <li class="nav-item">
@@ -20,7 +20,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="/CompCalc">Composite Laminate Calculator</a>
         </li>
       </ul>
     </div>
