update resume http address

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@ The work is based on the course project I completed in MECH 530 Mechanics of Com
 <p>2. The ADI heat calculator solves the 2D diffusion of Heat equation over a squared plate with Dirichlet Boundary Conditions using the Alternating-Direction Implicit (ADI) Scheme.</p>
 <br>
 <p>Thanks my pal Nic Paun for helping me deploying this app to google cloud run.</p>
-<p>You can access my resume <a href="https://github.com/jasonzhou1997/resume/blob/main/Zhou_Xinchen%20Resume.pdf">here.</a></p>
+<p>You can access my resume <a href="https://github.com/jasonzhou1997/resume/blob/main/Zhou_Xinchen%20Resume%202021_09.pdf">here.</a></p>
     <image src="{{ url_for('static', filename='images/composite_lam.png')}}"ALIGN=”left”/>
                   <image src="{{ url_for('static', filename='images/ADI_demo.png')}} "width = "800" height = "500"/>
 
